update z-indexes globally to work with bootstrap 1xxx z-indexes, fix z-index on inventories/edit view

--- a/app/assets/stylesheets/layout/_loader.scss
+++ b/app/assets/stylesheets/layout/_loader.scss
@@ -4,9 +4,8 @@
   left: 0;
   width: 100%;
   display: none;
-  z-index: 2;
+  z-index: 1200;
 }
-
 
 .loader-wrapper {
   height: 100vh;
